fix inital dark mode state and make country column nested into an anchor tag

--- a/src/sass/_bease.scss
+++ b/src/sass/_bease.scss
@@ -73,8 +73,8 @@ $main-transition: all 0.2s ease;
   background: $Dark-Blue;
 }
 .dark-mode-body {
-  color: $Very-Dark-Blue;
-  background: $Very-Light-Gray;
+  background: $Very-Dark-Blue;
+  color: $White;
 }
 // ___________________________________________________________
 // :not(img) {
