--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -2,8 +2,8 @@ body {
   font-size: $main-font-size;
   font-family: $font-family;
   font-weight: 300;
-  background: $Very-Dark-Blue;
-  color: $White;
+  color: $Very-Dark-Blue;
+  background: $Very-Light-Gray;
   text-transform: capitalize;
 }
 h1,
